// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Edge Cases and Validation - Sprint 01 > should generate foreign key constraints correctly 1`] = `
"
-- ============================================
-- Table for entity: Customer
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CUSTOMERP (
    ID INTEGER NOT NULL,
    NAME VARCHAR(80) NOT NULL,
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID)
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE CUSTOMERP IS 'Table for Customer - Generated by CMagic';
COMMENT ON COLUMN CUSTOMERP.ID IS 'id field';
COMMENT ON COLUMN CUSTOMERP.NAME IS 'name field';

-- ============================================
-- Table for entity: Order
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE ORDERP (
    ID INTEGER NOT NULL,
    CUSTOMERID INTEGER NOT NULL,
    ORDERNUMBER VARCHAR(20),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (ORDERNUMBER)
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX ORDERP_ORDERNUMBER_IDX ON ORDERP (ORDERNUMBER);

-- Comments
COMMENT ON TABLE ORDERP IS 'Table for Order - Generated by CMagic';
COMMENT ON COLUMN ORDERP.ID IS 'id field';
COMMENT ON COLUMN ORDERP.CUSTOMERID IS 'customerId field';
COMMENT ON COLUMN ORDERP.ORDERNUMBER IS 'orderNumber field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

ALTER TABLE ORDERP ADD CONSTRAINT FK_ORDER_CUSTOMERID FOREIGN KEY (CUSTOMERID) REFERENCES CUSTOMERP (ID);
CREATE INDEX ORDERP_CUSTOMERID_IDX ON ORDERP (CUSTOMERID);

"
`;

exports[`Edge Cases and Validation - Sprint 01 > should handle all constraint combinations 1`] = `
"
-- ============================================
-- Table for entity: FullConstraints
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE FULLCONSTRAINTSP (
    ID INTEGER NOT NULL,
    UNIQUEREQUIRED VARCHAR(50) NOT NULL,
    UNIQUEOPTIONAL VARCHAR(50),
    DEFAULTREQUIRED VARCHAR(30) NOT NULL DEFAULT 'test',
    DEFAULTOPTIONAL VARCHAR(30) DEFAULT 'optional',
    BOOLEANDEFAULT CHAR(1) DEFAULT 'Y',
    DECIMALDEFAULT DECIMAL(10,2) DEFAULT 99.99,
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (UNIQUEREQUIRED),
    UNIQUE (UNIQUEOPTIONAL),
    CHECK (BOOLEANDEFAULT IN ('Y', 'N'))
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX FULLCONSTRAINTSP_UNIQUEREQUIRED_IDX ON FULLCONSTRAINTSP (UNIQUEREQUIRED);
CREATE UNIQUE INDEX FULLCONSTRAINTSP_UNIQUEOPTIONAL_IDX ON FULLCONSTRAINTSP (UNIQUEOPTIONAL);

-- Comments
COMMENT ON TABLE FULLCONSTRAINTSP IS 'Table for FullConstraints - Generated by CMagic';
COMMENT ON COLUMN FULLCONSTRAINTSP.ID IS 'id field';
COMMENT ON COLUMN FULLCONSTRAINTSP.UNIQUEREQUIRED IS 'uniqueRequired field';
COMMENT ON COLUMN FULLCONSTRAINTSP.UNIQUEOPTIONAL IS 'uniqueOptional field';
COMMENT ON COLUMN FULLCONSTRAINTSP.DEFAULTREQUIRED IS 'defaultRequired field';
COMMENT ON COLUMN FULLCONSTRAINTSP.DEFAULTOPTIONAL IS 'defaultOptional field';
COMMENT ON COLUMN FULLCONSTRAINTSP.BOOLEANDEFAULT IS 'booleanDefault field';
COMMENT ON COLUMN FULLCONSTRAINTSP.DECIMALDEFAULT IS 'decimalDefault field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`Edge Cases and Validation - Sprint 01 > should handle complex struct nesting 1`] = `
"**free
// ============================================
// company headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(company_h_defined)       
/eof                               
/endif                             
/define company_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'

/// ========================================
// structures communes
/// ========================================

// structure contactinfo réutilisable
dcl-ds company_contactinfo_t qualified template;
  email VARCHAR(100);
  phone VARCHAR(20);
end-ds;

// structure fulladdress réutilisable
dcl-ds company_fulladdress_t qualified template;
  street VARCHAR(100);
  city VARCHAR(50);
  contact LIKEDS(contactinfo_t);
end-ds;


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;


///========================================
// structures entité
///========================================

///
// structure de base company (données métier)
///
dcl-ds company_t qualified template;
  id INT(10);
  name VARCHAR(100);
  address LIKEDS(company_fulladdress_t);
end-ds;

///
// structure pour clé primaire
///
dcl-ds company_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée company (avec métadonnées techniques)
///
dcl-ds company_detail_t qualified template;
  // données métier héritées de company_t
  detail likeds(company_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum company_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`Performance and Robustness - Sprint 01 > should handle multiple entities with complex relationships 1`] = `
"
-- ============================================
-- Table for entity: Customer
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CUSTOMERP (
    ID INTEGER NOT NULL,
    CODE VARCHAR(10) NOT NULL,
    NAME VARCHAR(80) NOT NULL,
    ADDRESS VARCHAR(256),
    STATUS VARCHAR(256) DEFAULT 'ACTIVE',
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (CODE)
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX CUSTOMERP_CODE_IDX ON CUSTOMERP (CODE);

-- Comments
COMMENT ON TABLE CUSTOMERP IS 'Table for Customer - Generated by CMagic';
COMMENT ON COLUMN CUSTOMERP.ID IS 'id field';
COMMENT ON COLUMN CUSTOMERP.CODE IS 'code field';
COMMENT ON COLUMN CUSTOMERP.NAME IS 'name field';
COMMENT ON COLUMN CUSTOMERP.ADDRESS IS 'address field';
COMMENT ON COLUMN CUSTOMERP.STATUS IS 'status field';

-- ============================================
-- Table for entity: Product
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE PRODUCTP (
    ID INTEGER NOT NULL,
    CODE VARCHAR(20) NOT NULL,
    NAME VARCHAR(100) NOT NULL,
    PRICE DECIMAL(10,2),
    ACTIVE CHAR(1) DEFAULT 'Y',
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (CODE),
    CHECK (ACTIVE IN ('Y', 'N'))
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX PRODUCTP_CODE_IDX ON PRODUCTP (CODE);

-- Comments
COMMENT ON TABLE PRODUCTP IS 'Table for Product - Generated by CMagic';
COMMENT ON COLUMN PRODUCTP.ID IS 'id field';
COMMENT ON COLUMN PRODUCTP.CODE IS 'code field';
COMMENT ON COLUMN PRODUCTP.NAME IS 'name field';
COMMENT ON COLUMN PRODUCTP.PRICE IS 'price field';
COMMENT ON COLUMN PRODUCTP.ACTIVE IS 'active field';

-- ============================================
-- Table for entity: Order
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE ORDERP (
    ID INTEGER NOT NULL,
    ORDERNUMBER VARCHAR(20) NOT NULL,
    CUSTOMERID INTEGER NOT NULL,
    PRODUCTID INTEGER NOT NULL,
    PRIORITY VARCHAR(256) DEFAULT 'MEDIUM',
    ORDERDATE DATE NOT NULL,
    DELIVERYDATE DATE,
    AMOUNT DECIMAL(15,2) DEFAULT 0,
    NOTES VARCHAR(500),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (ORDERNUMBER)
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX ORDERP_ORDERNUMBER_IDX ON ORDERP (ORDERNUMBER);

-- Comments
COMMENT ON TABLE ORDERP IS 'Table for Order - Generated by CMagic';
COMMENT ON COLUMN ORDERP.ID IS 'id field';
COMMENT ON COLUMN ORDERP.ORDERNUMBER IS 'orderNumber field';
COMMENT ON COLUMN ORDERP.CUSTOMERID IS 'customerId field';
COMMENT ON COLUMN ORDERP.PRODUCTID IS 'productId field';
COMMENT ON COLUMN ORDERP.PRIORITY IS 'priority field';
COMMENT ON COLUMN ORDERP.ORDERDATE IS 'orderDate field';
COMMENT ON COLUMN ORDERP.DELIVERYDATE IS 'deliveryDate field';
COMMENT ON COLUMN ORDERP.AMOUNT IS 'amount field';
COMMENT ON COLUMN ORDERP.NOTES IS 'notes field';


-- ============================================
-- Foreign Key Constraints
-- ============================================


ALTER TABLE ORDERP ADD CONSTRAINT FK_ORDER_CUSTOMERID FOREIGN KEY (CUSTOMERID) REFERENCES CUSTOMERP (ID);
CREATE INDEX ORDERP_CUSTOMERID_IDX ON ORDERP (CUSTOMERID);
ALTER TABLE ORDERP ADD CONSTRAINT FK_ORDER_PRODUCTID FOREIGN KEY (PRODUCTID) REFERENCES PRODUCTP (ID);
CREATE INDEX ORDERP_PRODUCTID_IDX ON ORDERP (PRODUCTID);

"
`;

exports[`Performance and Robustness - Sprint 01 > should handle multiple entities with complex relationships 2`] = `
"**free
// ============================================
// customer headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(customer_h_defined)       
/eof                               
/endif                             
/define customer_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'

/// ========================================
// structures communes
/// ========================================

// structure address réutilisable
dcl-ds customer_address_t qualified template;
  street VARCHAR(100);
  city VARCHAR(50);
  country VARCHAR(3) INZ('FR');
end-ds;


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;

/// ========================================
// constantes énumération
///========================================

dcl-enum status qualified;
  active 'active';
  inactive 'inactive';
end-enum;

dcl-enum priority qualified;
  low 'low';
  medium 'medium';
  high 'high';
  urgent 'urgent';
end-enum;


///========================================
// structures entité
///========================================

///
// structure de base customer (données métier)
///
dcl-ds customer_t qualified template;
  id INT(10);
  code VARCHAR(10);
  name VARCHAR(80);
  address LIKEDS(customer_address_t);
  status VARCHAR(20) INZ('ACTIVE');
end-ds;

///
// structure pour clé primaire
///
dcl-ds customer_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée customer (avec métadonnées techniques)
///
dcl-ds customer_detail_t qualified template;
  // données métier héritées de customer_t
  detail likeds(customer_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum customer_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`Performance and Robustness - Sprint 01 > should handle multiple entities with complex relationships 3`] = `
"**free
// ============================================
// order headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(order_h_defined)       
/eof                               
/endif                             
/define order_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'

/// ========================================
// structures communes
/// ========================================

// structure address réutilisable
dcl-ds order_address_t qualified template;
  street VARCHAR(100);
  city VARCHAR(50);
  country VARCHAR(3) INZ('FR');
end-ds;


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;

/// ========================================
// constantes énumération
///========================================

dcl-enum status qualified;
  active 'active';
  inactive 'inactive';
end-enum;

dcl-enum priority qualified;
  low 'low';
  medium 'medium';
  high 'high';
  urgent 'urgent';
end-enum;


///========================================
// structures entité
///========================================

///
// structure de base order (données métier)
///
dcl-ds order_t qualified template;
  id INT(10);
  ordernumber VARCHAR(20);
  customerid INT(10);
  productid INT(10);
  priority VARCHAR(20) INZ('MEDIUM');
  orderdate DATE;
  deliverydate DATE;
  amount PACKED(15:2) INZ(0);
  notes VARCHAR(500);
end-ds;

///
// structure pour clé primaire
///
dcl-ds order_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée order (avec métadonnées techniques)
///
dcl-ds order_detail_t qualified template;
  // données métier héritées de order_t
  detail likeds(order_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum order_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`RPG Generator - Sprint 01 > should generate RPG copybook for Customer with enum support 1`] = `
"**free
// ============================================
// customer headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(customer_h_defined)       
/eof                               
/endif                             
/define customer_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'

/// ========================================
// structures communes
/// ========================================

// structure address réutilisable
dcl-ds customer_address_t qualified template;
  ligne1 VARCHAR(50);
  ligne2 VARCHAR(50);
  ville VARCHAR(50);
  pays VARCHAR(3) INZ('FR');
end-ds;


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;

/// ========================================
// constantes énumération
///========================================

dcl-enum customerstatus qualified;
  active 'active';
  inactive 'inactive';
  suspended 'suspended';
end-enum;


///========================================
// structures entité
///========================================

///
// structure de base customer (données métier)
///
dcl-ds customer_t qualified template;
  id INT(10);
  code VARCHAR(10);
  name VARCHAR(80);
  address LIKEDS(customer_address_t);
  status VARCHAR(20) INZ('ACTIVE');
  creditlimit PACKED(15:2) INZ(0);
  isvip IND INZ('false');
end-ds;

///
// structure pour clé primaire
///
dcl-ds customer_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée customer (avec métadonnées techniques)
///
dcl-ds customer_detail_t qualified template;
  // données métier héritées de customer_t
  detail likeds(customer_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum customer_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`RPG Generator - Sprint 01 > should generate RPG with multiple enums and constants 1`] = `
"**free
// ============================================
// customerorder headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(customerorder_h_defined)       
/eof                               
/endif                             
/define customerorder_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;

/// ========================================
// constantes énumération
///========================================

dcl-enum customerstatus qualified;
  active 'active';
  inactive 'inactive';
  suspended 'suspended';
end-enum;

dcl-enum orderstatus qualified;
  pending 'pending';
  confirmed 'confirmed';
  shipped 'shipped';
  delivered 'delivered';
  cancelled 'cancelled';
end-enum;


///========================================
// structures entité
///========================================

///
// structure de base customerorder (données métier)
///
dcl-ds customerorder_t qualified template;
  id INT(10);
  customerid INT(10);
  customerstatus VARCHAR(20) INZ('ACTIVE');
  orderstatus VARCHAR(20) INZ('PENDING');
  totalamount PACKED(15:2) INZ(0);
end-ds;

///
// structure pour clé primaire
///
dcl-ds customerorder_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée customerorder (avec métadonnées techniques)
///
dcl-ds customerorder_detail_t qualified template;
  // données métier héritées de customerorder_t
  detail likeds(customerorder_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum customerorder_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`RPG Generator - Sprint 01 > should generate proper Customer_id_t structure 1`] = `
"**free
// ============================================
// customer headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(customer_h_defined)       
/eof                               
/endif                             
/define customer_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;


///========================================
// structures entité
///========================================

///
// structure de base customer (données métier)
///
dcl-ds customer_t qualified template;
  id INT(10);
  name VARCHAR(80);
end-ds;

///
// structure pour clé primaire
///
dcl-ds customer_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée customer (avec métadonnées techniques)
///
dcl-ds customer_detail_t qualified template;
  // données métier héritées de customer_t
  detail likeds(customer_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum customer_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`RPG Generator - Sprint 01 > should map all types correctly to RPG types 1`] = `
"**free
// ============================================
// typemapping headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(typemapping_h_defined)       
/eof                               
/endif                             
/define typemapping_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;


///========================================
// structures entité
///========================================

///
// structure de base typemapping (données métier)
///
dcl-ds typemapping_t qualified template;
  id INT(10);
  text VARCHAR(100);
  amount PACKED(10:2);
  date DATE;
  flag IND INZ('N');
end-ds;

///
// structure pour clé primaire
///
dcl-ds typemapping_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée typemapping (avec métadonnées techniques)
///
dcl-ds typemapping_detail_t qualified template;
  // données métier héritées de typemapping_t
  detail likeds(typemapping_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum typemapping_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`SQL Generator - Sprint 01 > should generate SQL for Customer entity with all types and constraints 1`] = `
"
-- ============================================
-- Table for entity: Customer
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CUSTOMERP (
    ID INTEGER NOT NULL,
    CODE VARCHAR(10) NOT NULL,
    NAME VARCHAR(80) NOT NULL,
    ADDRESS VARCHAR(256),
    PHONE VARCHAR(20),
    EMAIL VARCHAR(100),
    STATUS VARCHAR(256) DEFAULT 'ACTIVE',
    CREATIONDATE DATE,
    CREDITLIMIT DECIMAL(15,2) DEFAULT 0,
    ISVIP CHAR(1) DEFAULT 'N',
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (CODE),
    CHECK (ISVIP IN ('Y', 'N'))
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX CUSTOMERP_CODE_IDX ON CUSTOMERP (CODE);

-- Comments
COMMENT ON TABLE CUSTOMERP IS 'Table for Customer - Generated by CMagic';
COMMENT ON COLUMN CUSTOMERP.ID IS 'id field';
COMMENT ON COLUMN CUSTOMERP.CODE IS 'code field';
COMMENT ON COLUMN CUSTOMERP.NAME IS 'name field';
COMMENT ON COLUMN CUSTOMERP.ADDRESS IS 'address field';
COMMENT ON COLUMN CUSTOMERP.PHONE IS 'phone field';
COMMENT ON COLUMN CUSTOMERP.EMAIL IS 'email field';
COMMENT ON COLUMN CUSTOMERP.STATUS IS 'status field';
COMMENT ON COLUMN CUSTOMERP.CREATIONDATE IS 'creationDate field';
COMMENT ON COLUMN CUSTOMERP.CREDITLIMIT IS 'creditLimit field';
COMMENT ON COLUMN CUSTOMERP.ISVIP IS 'isVip field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`SQL Generator - Sprint 01 > should generate SQL for CustomerOrder with foreign keys 1`] = `
"
-- ============================================
-- Table for entity: Customer
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CUSTOMERP (
    ID INTEGER NOT NULL,
    CODE VARCHAR(10) NOT NULL,
    NAME VARCHAR(80) NOT NULL,
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (CODE)
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX CUSTOMERP_CODE_IDX ON CUSTOMERP (CODE);

-- Comments
COMMENT ON TABLE CUSTOMERP IS 'Table for Customer - Generated by CMagic';
COMMENT ON COLUMN CUSTOMERP.ID IS 'id field';
COMMENT ON COLUMN CUSTOMERP.CODE IS 'code field';
COMMENT ON COLUMN CUSTOMERP.NAME IS 'name field';

-- ============================================
-- Table for entity: CustomerOrder
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CUSTOMERORDERP (
    ID INTEGER NOT NULL,
    ORDERNUMBER VARCHAR(20) NOT NULL,
    CUSTOMERID INTEGER NOT NULL,
    STATUS VARCHAR(256) DEFAULT 'PENDING',
    ORDERDATE DATE NOT NULL,
    DELIVERYDATE DATE,
    TOTALAMOUNT DECIMAL(15,2) DEFAULT 0,
    NOTES VARCHAR(500),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (ORDERNUMBER)
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX CUSTOMERORDERP_ORDERNUMBER_IDX ON CUSTOMERORDERP (ORDERNUMBER);

-- Comments
COMMENT ON TABLE CUSTOMERORDERP IS 'Table for CustomerOrder - Generated by CMagic';
COMMENT ON COLUMN CUSTOMERORDERP.ID IS 'id field';
COMMENT ON COLUMN CUSTOMERORDERP.ORDERNUMBER IS 'orderNumber field';
COMMENT ON COLUMN CUSTOMERORDERP.CUSTOMERID IS 'customerId field';
COMMENT ON COLUMN CUSTOMERORDERP.STATUS IS 'status field';
COMMENT ON COLUMN CUSTOMERORDERP.ORDERDATE IS 'orderDate field';
COMMENT ON COLUMN CUSTOMERORDERP.DELIVERYDATE IS 'deliveryDate field';
COMMENT ON COLUMN CUSTOMERORDERP.TOTALAMOUNT IS 'totalAmount field';
COMMENT ON COLUMN CUSTOMERORDERP.NOTES IS 'notes field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

ALTER TABLE CUSTOMERORDERP ADD CONSTRAINT FK_CUSTOMERORDER_CUSTOMERID FOREIGN KEY (CUSTOMERID) REFERENCES CUSTOMERP (ID);
CREATE INDEX CUSTOMERORDERP_CUSTOMERID_IDX ON CUSTOMERORDERP (CUSTOMERID);

"
`;

exports[`SQL Generator - Sprint 01 > should generate a correct CREATE TABLE statement for a simple entity 1`] = `
"
-- ============================================
-- Table for entity: Tiers
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE TIERSP (
    ID INTEGER,
    NOM VARCHAR(256),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID)
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE TIERSP IS 'Table for Tiers - Generated by CMagic';
COMMENT ON COLUMN TIERSP.ID IS 'id field';
COMMENT ON COLUMN TIERSP.NOM IS 'nom field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`SQL Generator - Sprint 01 > should generate proper constraints and indexes 1`] = `
"
-- ============================================
-- Table for entity: ConstraintTest
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CONSTRAINTTESTP (
    ID INTEGER NOT NULL,
    UNIQUECODE VARCHAR(20) NOT NULL,
    EMAIL VARCHAR(100),
    OPTIONALFIELD VARCHAR(50),
    DEFAULTVALUE VARCHAR(30) DEFAULT 'test',
    BOOLEANFIELD CHAR(1) DEFAULT 'N',
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (UNIQUECODE),
    UNIQUE (EMAIL),
    CHECK (BOOLEANFIELD IN ('Y', 'N'))
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX CONSTRAINTTESTP_UNIQUECODE_IDX ON CONSTRAINTTESTP (UNIQUECODE);
CREATE UNIQUE INDEX CONSTRAINTTESTP_EMAIL_IDX ON CONSTRAINTTESTP (EMAIL);

-- Comments
COMMENT ON TABLE CONSTRAINTTESTP IS 'Table for ConstraintTest - Generated by CMagic';
COMMENT ON COLUMN CONSTRAINTTESTP.ID IS 'id field';
COMMENT ON COLUMN CONSTRAINTTESTP.UNIQUECODE IS 'uniqueCode field';
COMMENT ON COLUMN CONSTRAINTTESTP.EMAIL IS 'email field';
COMMENT ON COLUMN CONSTRAINTTESTP.OPTIONALFIELD IS 'optionalField field';
COMMENT ON COLUMN CONSTRAINTTESTP.DEFAULTVALUE IS 'defaultValue field';
COMMENT ON COLUMN CONSTRAINTTESTP.BOOLEANFIELD IS 'booleanField field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`SQL Generator - Sprint 01 > should handle all primitive types correctly 1`] = `
"
-- ============================================
-- Table for entity: TypeTest
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE TYPETESTP (
    ID INTEGER NOT NULL,
    TEXTSHORT VARCHAR(10),
    TEXTLONG VARCHAR(255),
    TEXTDEFAULT VARCHAR(256),
    NUMBER INTEGER,
    PRICE DECIMAL(10,2),
    BIRTHDATE DATE,
    ISACTIVE CHAR(1),
    ISACTIVEDEFAULT CHAR(1) DEFAULT 'Y',
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    CHECK (ISACTIVE IN ('Y', 'N')),
    CHECK (ISACTIVEDEFAULT IN ('Y', 'N'))
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE TYPETESTP IS 'Table for TypeTest - Generated by CMagic';
COMMENT ON COLUMN TYPETESTP.ID IS 'id field';
COMMENT ON COLUMN TYPETESTP.TEXTSHORT IS 'textShort field';
COMMENT ON COLUMN TYPETESTP.TEXTLONG IS 'textLong field';
COMMENT ON COLUMN TYPETESTP.TEXTDEFAULT IS 'textDefault field';
COMMENT ON COLUMN TYPETESTP.NUMBER IS 'number field';
COMMENT ON COLUMN TYPETESTP.PRICE IS 'price field';
COMMENT ON COLUMN TYPETESTP.BIRTHDATE IS 'birthDate field';
COMMENT ON COLUMN TYPETESTP.ISACTIVE IS 'isActive field';
COMMENT ON COLUMN TYPETESTP.ISACTIVEDEFAULT IS 'isActiveDefault field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`SQL Generator - Sprint 01 > should handle multiple entities correctly 1`] = `
"
-- ============================================
-- Table for entity: Produit
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE PRODUITP (
    REF VARCHAR(256),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE PRODUITP IS 'Table for Produit - Generated by CMagic';
COMMENT ON COLUMN PRODUITP.REF IS 'ref field';

-- ============================================
-- Table for entity: Commande
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE COMMANDEP (
    NUM INTEGER,
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE COMMANDEP IS 'Table for Commande - Generated by CMagic';
COMMENT ON COLUMN COMMANDEP.NUM IS 'num field';


-- ============================================
-- Foreign Key Constraints
-- ============================================


"
`;
